@@ -85,10 +85,10 @@ t/56_editfiles_b.out
 t/56_editfiles_edit.out
 t/58_vsplitmodule.t
 t/60_vpm.t
-t/80_vppp.t
-t/80_vppp_cmped.out
-t/80_vppp_none.out
-t/80_vppp_simple.out
+t/80_vperlpp.t
+t/80_vperlpp_cmped.out
+t/80_vperlpp_none.out
+t/80_vperlpp_simple.out
 t/85_vhier.t
 t/85_vhier_cells.out
 t/85_vhier_inpfiles.out
@@ -118,6 +118,6 @@ verilog/v_hier_top2.v
 verilog/v_v2k.v
 vhier
 vpm
-vppp
+vperlpp
 vrename
 vsplitmodule
