@@ -12,18 +12,18 @@ use Test;
 BEGIN { plan tests => 6 }
 BEGIN { require "t/test_utils.pl"; }
 
-print "Checking vppp...\n";
+print "Checking vperlpp...\n";
 
-vppp ("t/80_vppp_none.out",   "test_dir/vppp_none.v",	"");
-vppp ("t/80_vppp_cmped.out",  "test_dir/vppp_cmped.v",	"--nocomment --pedantic");
-vppp ("t/80_vppp_simple.out", "test_dir/vppp_simple.v",	"--simple");
+vperlpp ("t/80_vperlpp_none.out",   "test_dir/vperlpp_none.v",	"");
+vperlpp ("t/80_vperlpp_cmped.out",  "test_dir/vperlpp_cmped.v",	"--nocomment --pedantic");
+vperlpp ("t/80_vperlpp_simple.out", "test_dir/vperlpp_simple.v", "--simple");
 
-sub vppp {
+sub vperlpp {
     my $checkname = shift;
     my $out = shift;
     my $flags = shift;
 
-    run_system ("${PERL} vppp ${flags} -y verilog inc2.v > $out");
+    run_system ("${PERL} vperlpp ${flags} -y verilog inc2.v > $out");
     ok(-r $out);
     ok(files_identical ($out, $checkname));
 }
